--- a/kalki/index.scss
+++ b/kalki/index.scss
@@ -1,3 +1,8 @@
-body {
-  background-color: red;
-}
+@import "_variables";
+@import "_base";
+
+// card
+@import "components/card";
+
+//colors
+@import "_colors";
