--- a/kalki/_variables.scss
+++ b/kalki/_variables.scss
@@ -13,7 +13,7 @@ $base-margin: 0.75rem;
 
 // borders
 $base-border-thickness: 1px;
-$base-border-radius: 20px;
+$base-border-radius: 10px;
 
 //box shadow
 $base-box-shadow: 1px 2px 5px;
@@ -29,11 +29,10 @@ $colors: (
   "warning": yellow,
   "danger": red,
   "info": cyan,
-  "light": white,
   "orange": orange,
   "pink": pink,
   "brown": brown,
   "black": black,
   "purple": purple,
-  "white": white
+  "white": white,
 );
